# CleanPlayer

./: CMakeLists.txt  VlcBackend.cpp  main.cpp
player/: IPlayerBackend.h  PlayerWidget.cpp  PlayerWidget.h  QtMediaBackend.cpp  QtMediaBackend.h  VlcBackend.cpp  VlcBackend.h
